Fix inline-block/contextmenu display on IE and FF2

--- a/imp/themes/ie6_or_less.css
+++ b/imp/themes/ie6_or_less.css
@@ -6,3 +6,9 @@
 .htmlMessage ul li, .htmlMessage ol li {
     margin-left: 2em;
 }
+
+/* Fixes broken inline-block. */
+span.spellcheckPopdownImg, span.threadImg, .downloadAtc, .downloadZipAtc, .saveImgAtc, .stripAtc {
+    zoom: 1;
+    *display: inline;
+}
